@@ -2,11 +2,14 @@
 #+SETUPFILE: setup.org
 
 * Release 1.0.0
-** Update to the latest version of AsyncHttpClient (1.9.30)
+** Update to the latest version of AsyncHttpClient (1.9.31)
 *** Remove `remove-params-on-redirect` option
     No longer supported by the underlying AsyncHttpClient library and of dubious value.
+*** Remove `async-connect` option
+    No longer supported by the underlying AsyncHttpClient library; all connections are performed asynchronously.
 *** Overhaul character set handling for multipart functions
 *** Use more precise exceptions
+*** Move WebSocket implementation to its own namespace
 ** Use more idiomatic Clojure
 ** Extract websocket code to separate namespace
 * Release 0.6.1
